Updated to ugly webpage

--- a/Kala_styles.css
+++ b/Kala_styles.css
@@ -3,7 +3,7 @@
 body {
     background-color: #faf602;
     color:hsl(0, 0%, 100%);
-    font-size: large;
+    font-size: x-large;
     font-family:Georgia, 'Times New Roman', Times, serif ;
 }
 
